force-app/main/default/objects/Additional_Info_NL_Letter_Of_Liability__c/Additional_Info_NL_Letter_Of_Liability__c.object-meta.xml
<CustomObject>
    <description>A CreditsafeCompanyAdditionalInformationNLLetterOfLiabilityInformation403V2</description>
    <label>Additional Info NL Letter Of Liability</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Additional Info NL Letter Of Liability</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Info NL Letter Of Liabilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>