force-app/main/default/objects/Additional_Info_NL_Letter_Of_Liability__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>Displays the mother company’s name that has deposit the 403 Statement.</description>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>