force-app/main/default/objects/Additional_Info_NL_Letter_Of_Liability__c/fields/Creditsafe_Company_Additional_Info_NL__c.field-meta.xml
<CustomField>
    <fullName>Creditsafe_Company_Additional_Info_NL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A CreditsafeCompanyAdditionalInformationNLAdditionalInformationV2</description>
    <label>Creditsafe Company Additional Info NL</label>
    <referenceTo>Creditsafe_Company_Additional_Info_NL__c</referenceTo>
    <relationshipLabel>Additional Info NL Letter Of Liabilities</relationshipLabel>
    <relationshipName>Additional_Info_NL_Letter_Of_Liabilities</relationshipName>
    <type>Lookup</type>
</CustomField>