force-app/main/default/objects/Additional_Info_NL_Letter_Of_Liability__c/fields/Creditsafe_Company_Report_Full__c.field-meta.xml
<CustomField>
    <fullName>Creditsafe_Company_Report_Full__c</fullName>
    <description>A detailed report about a company.</description>
    <label>Creditsafe Company Report Full</label>
    <referenceTo>Creditsafe_Company_Report_Full__c</referenceTo>
    <relationshipLabel>Additional Info NL Letter Of Liabilities</relationshipLabel>
    <relationshipName>Additional_Info_NL_Letter_Of_Liabilities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>