force-app/main/default/objects/Additional_Info_NL_Letter_Of_Liability__c/fields/Date_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted__c</fullName>
    <description>Shows when the 403 statement has been deposit by the mother company.</description>
    <label>Date Submitted</label>
    <type>Date</type>
</CustomField>