force-app/main/default/objects/Additional_Info_NL_Letter_Of_Liability__c/fields/Financial_Year__c.field-meta.xml
<CustomField>
    <fullName>Financial_Year__c</fullName>
    <description>Displays the year of the 403 Statement.</description>
    <label>Financial Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>