force-app/main/default/objects/Additional_Info_NL_Letter_Of_Liability__c/fields/Liability1_Removal_Submitted_Parent2__c.field-meta.xml
<CustomField>
    <fullName>Liability1_Removal_Submitted_Parent2__c</fullName>
    <description>Shows when the removal date for this 403 statement has been submitted of mother company 2.</description>
    <label>Liability1 Removal Submitted Parent2</label>
    <type>Date</type>
</CustomField>