force-app/main/default/objects/Additional_Info_NL_Letter_Of_Liability__c/fields/Liability1_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Liability1_Submitted_Date__c</fullName>
    <description>Shows the submit date for this 403 statement.</description>
    <label>Liability1 Submitted Date</label>
    <type>Date</type>
</CustomField>