force-app/main/default/objects/Additional_Info_NL_Letter_Of_Liability__c/fields/Liability1_Submitted_Date_Parent2__c.field-meta.xml
<CustomField>
    <fullName>Liability1_Submitted_Date_Parent2__c</fullName>
    <description>Shows the submit date for this 403 statement of mother company 2.</description>
    <label>Liability1 Submitted Date Parent2</label>
    <type>Date</type>
</CustomField>