force-app/main/default/objects/Additional_Info_NL_Letter_Of_Liability__c/fields/Liability2_Removal_Date_Parent2__c.field-meta.xml
<CustomField>
    <fullName>Liability2_Removal_Date_Parent2__c</fullName>
    <description>Shows the removal date for this 403 statement of mother company 2.</description>
    <label>Liability2 Removal Date Parent2</label>
    <type>Date</type>
</CustomField>