force-app/main/default/objects/Additional_Info_NL_Letter_Of_Liability__c/fields/Liability2_Start_Date_Parent2__c.field-meta.xml
<CustomField>
    <fullName>Liability2_Start_Date_Parent2__c</fullName>
    <description>Shows the start date for this 403 statements of mother company 2.</description>
    <label>Liability2 Start Date Parent2</label>
    <type>Date</type>
</CustomField>